--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.34.4",
     "@clerk/themes": "^2.4.33",
+    "@sentry/nextjs": "^10",
     "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
     "convex": "^1.28.2",
