--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,8 +14,12 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@ai-sdk/openai": "1.3.23",
     "@clerk/backend": "^2.20.0",
+    "@convex-dev/agent": "^0.1.16",
+    "ai": "4.3.19",
     "convex": "^1.28.2",
+    "convex-helpers": "^0.1.104",
     "openai": "^6.8.1"
   }
 }
