19: AI tool calling

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,6 +20,7 @@
     "ai": "4.3.19",
     "convex": "^1.28.2",
     "convex-helpers": "^0.1.104",
-    "openai": "^6.8.1"
+    "openai": "^6.8.1",
+    "zod": "^3.25.76"
   }
 }
